fixed sidebar-navigation double border-top, re #7116

--- a/public/assets/stylesheets/less/sidebar.less
+++ b/public/assets/stylesheets/less/sidebar.less
@@ -65,6 +65,9 @@ div#sidebar-navigation {
     div.sidebar-widget-header {
         display: none;
     }
+    div.sidebar-widget-content {
+        border-top: 0px;
+    }
 }
 .widget-links {
     margin: 5px;
